--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,7 +1,11 @@
 <mat-card class="auth-form">
   <mat-card-content>
     <div class="sign-up-form">
-      <h1>Sign Up</h1>
+      <div class="form-header">
+        <h1>Sign Up</h1>
+        <span class="fill-space"></span>
+        <div class="form-header-footer"><span>Have an account?</span>&nbsp;<a routerLink="/login">Log in</a></div>
+      </div>
       <form [formGroup]="userForm" (ngSubmit)="signUp()">
         <mat-form-field class="full-width">
           <input matInput formControlName="name" type="text" placeholder="Name" required>
@@ -18,7 +22,7 @@
           <mat-icon matSuffix>vpn_key</mat-icon>
           <mat-hint class="is-danger" *ngIf="formErrors.password">{{ formErrors.password }}</mat-hint>
         </mat-form-field>
-        <button mat-raised-button [disabled]="!userForm.valid" class="btnSbm" type="submit" name="button" color="primary">Sign up</button>
+          <button mat-raised-button [disabled]="!userForm.valid" class="btnSbm" type="submit" name="button" color="primary">Sign up</button>
       </form>
     </div>
   </mat-card-content>
