--- a/src/app/ui/navbar/navbar.component.html
+++ b/src/app/ui/navbar/navbar.component.html
@@ -5,8 +5,7 @@
       <span>Insta</span>
     </a>
     <span class="spacer"></span>
-    <a mat-button routerLink="/login">Login</a>
-    <a mat-button routerLink="/auth">Sign up</a>
+    <a mat-button routerLink="/register">Sign up</a>
     <a mat-icon-button routerLink="/dashboard"><mat-icon aria-label="Profile">account_circle</mat-icon></a>
   </mat-toolbar-row>
 </mat-toolbar>
