--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -1,7 +1,17 @@
+.profile {
+  position: relative;
+  .progress-bar {
+    position: absolute;
+    width: 100%;
+    top: 0;
+    z-index: 1;
+  }
+}
 .btn-logout {
   margin: 10px 0 0 3px;
 }
 .card {
+  min-width: 400px;
   max-width: 400px;
   width: 100%;
 }
@@ -12,7 +22,7 @@
       display: block;
       margin: 0 0 0 10px;
       font-size: 16px;
-      width: 200px;
+      width: 150px;
       padding: 5px;
   }
   .input {
