--- a/src/app/ui/navbar/navbar.component.html
+++ b/src/app/ui/navbar/navbar.component.html
@@ -10,7 +10,7 @@
     </a>
     <span class="spacer"></span>
     <a mat-button routerLink="/register" *ngIf="!(_aS.user | async)">Sign up</a>
-    <a mat-icon-button routerLink="/post" *ngIf="(_aS.user | async)"><mat-icon aria-label="add" class="icon">add
+    <a mat-icon-button routerLink="/post/new" *ngIf="(_aS.user | async)"><mat-icon aria-label="add" class="icon">add
 </mat-icon></a>
     <a mat-button routerLink="/dashboard" *ngIf="(_aS.user | async)">{{ (_aS.user | async)?.displayName }}</a>
     <a mat-icon-button routerLink="/profile" *ngIf="(_aS.user | async)"><mat-icon aria-label="Profile">account_circle</mat-icon></a>
