--- a/src/app/post-comments/post-comments.component.scss
+++ b/src/app/post-comments/post-comments.component.scss
@@ -24,8 +24,18 @@
     margin-top: 20px;
     .comment {
       font-size: 12px;
+      padding: 5px 0;
+      display: flex;
+      align-items: center;
+      .author-photo {
+        width: 24px;
+        height: 24px;
+        border-radius: 24px;
+        margin-right: 5px;
+      }
       .author-name {
         font-weight: bold;
+        margin-right: 5px;
       }
     }
   }
