--- a/src/app/ui/navbar/navbar.component.scss
+++ b/src/app/ui/navbar/navbar.component.scss
@@ -2,8 +2,6 @@
   padding: 0 14px;
 }
 
-
-
 .logo {
   display: flex;
   align-items: center;
@@ -11,5 +9,6 @@
   color: #fff;
   .icon {
     padding: 0 5px;
+    width: auto;
   }
 }
