--- a/src/app/post-comments/post-comments.component.scss
+++ b/src/app/post-comments/post-comments.component.scss
@@ -3,12 +3,16 @@
   .new-comment {
     display: flex;
     position: relative;
-    img {
+    .profile-photo {
       width: 30px;
       height: 30px;
-      border-radius: 30px;
-      object-fit: cover;
       margin-right: 10px;
+      img {
+        width: 100%;
+        height: 100%;
+        border-radius: 30px;
+        object-fit: cover;
+      }
     }
     .btn {
       position: absolute;
@@ -45,6 +49,6 @@
     border: 1px solid #ddd;
     padding: 5px 10px;
     font-size: 12px;
-    width: 100%;
+    width: calc(100% - 40px);
   }
 }
