--- a/src/app/post-dialog/post-dialog.component.html
+++ b/src/app/post-dialog/post-dialog.component.html
@@ -5,11 +5,16 @@
   </div>
   <div class="post-meta">
     <div class="author">
-      <img src="{{ (data.user | async)?.photoURL }}" alt="profile photo">
+      <div class="photo animated-background">
+        <img src="{{ (data.user | async)?.photoURL }}" alt="profile photo">
+      </div>
       <a [routerLink]="['profile', data.user_id]">{{ (data.user | async)?.displayName }}</a>
+      <a color="primary" class="btn-delete-post" *ngIf="data.user_id === (_authS.user | async)?.uid" (click)="deletePost(data.id)">
+        <mat-icon aria-label="delete">delete</mat-icon>
+      </a>
     </div>
     <div class="likes">
-      {{ data.likes }} likes
+      {{ likesCount }} likes
     </div>
     <div class="description">
       {{data.description}}
