--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,10 +28,9 @@ a {
 }
 .container {
   display: flex;
-  justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: calc(100vh - 65px);
+  padding: 40px 20px;
 }
 
 .spacer {
@@ -76,11 +75,12 @@ a {
 }
 .grid-list {
   width: 100%;
-  min-width: 450px;
+  min-width: 600px;
   img {
     width: 100%;
     object-fit: cover;
     height: 100%;
+    padding: 10px;
   }
 }
 
@@ -89,4 +89,26 @@ a {
 }
 .post-dialog .mat-dialog-container {
   padding: 0;
+}
+
+@keyframes placeHolderShimmer{
+    0%{
+        background-position: -468px 0
+    }
+    100%{
+        background-position: 468px 0
+    }
+}
+
+.animated-background {
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: infinite;
+    animation-name: placeHolderShimmer;
+    animation-timing-function: linear;
+    background: #f6f7f8;
+    background: linear-gradient(to right, #eeeeee 8%, #dddddd 18%, #eeeeee 33%);
+    background-size: 800px 104px;
+    height: 96px;
+    position: relative;
 }
