--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
+<app-navbar></app-navbar>
 <div class="app" [class.loggedin]="(_authS.user | async)">
-  <app-navbar></app-navbar>
   <div class="container">
-    <router-outlet></router-outlet>
+    <div class="loader-area" *ngIf="!(_authS.user | async)">
+      <mat-spinner class="loading-spinner" [diameter]="48"></mat-spinner>
+    </div>
+    <router-outlet *ngIf="(_authS.user | async)"></router-outlet>
   </div>
 </div>
