--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,27 @@
-<mat-grid-list cols="3" rowHeight="200px" class="grid-list">
-  <mat-grid-tile *ngFor="let post of posts | async" rowspan="1" colspan="1" class="tile">
+<div class="loader-area" *ngIf="!posts">
+  <mat-spinner class="loading-spinner" [diameter]="48"></mat-spinner>
+</div>
+<ul class="posts-list grid-list" *ngIf="posts">
+  <li class="post-item" *ngFor="let post of posts">
+    <div class="header">
+      <div class="author">
+        <div class="photo">
+          <!-- <img src="{{ (post.user | async)?.photoURL }}" alt="profile photo"> -->
+        </div>
+        <!-- <a [routerLink]="['profile', post.user_id]">{{ (post.user | async)?.displayName }}</a> -->
+        <a color="primary" class="btn-delete-post" (click)="deletePost(post.id)" *ngIf="post.user_id === (_authS.user | async)?.uid" (click)="deletePost(post.id)">
+          <mat-icon aria-label="delete">delete</mat-icon>
+        </a>
+      </div>
+    </div>
     <img src="{{post.photoURL}}" alt="{{post.imageName}}" class="post" (click)="openPost(post)">
-  </mat-grid-tile>
-</mat-grid-list>
+    <div class="footer">
+      <div>
+        <span class="likes">{{ post.likes }} likes</span>
+        <span class="description">{{post.description}}</span>
+      </div>
+      <mat-icon aria-label="Like" class="action-like" *ngIf="!liked" (click)="updatePostLikes(post.id, 'inc', user.uid)">favorite_border</mat-icon>
+      <mat-icon aria-label="Like" class="action-like liked" *ngIf="liked" (click)="updatePostLikes(post.id, 'dec', user.uid)">favorite</mat-icon>
+    </div>
+  </li>
+</ul>
