--- a/src/app/post-dialog/post-dialog.component.scss
+++ b/src/app/post-dialog/post-dialog.component.scss
@@ -2,49 +2,54 @@
   display: flex;
   position: relative;
   height: 100%;
+  flex-direction: column;
+  .post-content {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    .header, .footer {
+      padding: 14px 15px;
+    }
+    .header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      position: absolute;
+      z-index: 1;
+      width: 100%;
+      background: linear-gradient(to top, rgba(0,0,0,0), rgba(0,0,0,1));
+      .btn-delete-post {
+        position: absolute;
+        right: 60px;
+        color: #ddd;
+      }
+      .author {
+        display: flex;
+        align-items: center;
+        .photo {
+          width: 32px;
+          height: 32px;
+          margin-right: 10px;
+          img {
+            width: 100%;
+            height: 100%;
+            border-radius: 32px;
+            object-fit: cover;
+          }
+        }
+        a {
+          outline: 0;
+          color: #fff;
+        }
+      }
+    }
+  }
   .post-image {
     position: relative;
   }
-  .action-like {
-    font-size: 32px;
-    color: #fff;
-    bottom: 15px;
-    right: 15px;
-    position: absolute;
-    cursor: pointer;
-    &:hover, &.liked {
-      color: red;
-    }
-  }
   .post-meta {
     padding: 20px;
-    margin-bottom: 20px;
-    width: 40%;
-    .btn-delete-post {
-      position: absolute;
-      right: 20px;
-      color: #ddd;
-    }
-    .author {
-      display: flex;
-      align-items: center;
-      margin-bottom: 20px;
-      .photo {
-        width: 32px;
-        height: 32px;
-        margin-right: 10px;
-        img {
-          width: 100%;
-          height: 100%;
-          border-radius: 32px;
-          object-fit: cover;
-        }
-      }
-      a {
-        outline: 0;
-        color: #000;
-      }
-    }
+    width: 100%;
     .description, .likes {
         font-size: 14px;
     }
@@ -57,6 +62,20 @@
 .post-image {
   background-size: cover;
   background-position: center;
-  width: 60%;
+  width: 100%;
   height: 70vh;
+}
+@media only screen and (min-width: 600px) {
+  .post {
+    flex-direction: row;
+    .post-content {
+      width: 60%;
+      .header {
+        width: 60%;
+      }
+    }
+    .post-meta {
+      width: 40%;
+    }
+  }
 }
