--- a/src/app/ui/navbar/navbar.component.scss
+++ b/src/app/ui/navbar/navbar.component.scss
@@ -1,5 +1,3 @@
-
-
 .logo {
   display: flex;
   align-items: center;
@@ -8,5 +6,15 @@
   .icon {
     padding: 0 5px;
     width: auto;
+  }
+}
+
+.btn-feed {
+  padding: 0;
+  min-width: auto;
+}
+@media only screen and (min-width: 420px) {
+  .btn-feed {
+    padding: 0 14px;
   }
 }
